Java 17 support: Requires: --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
Source:
https://stackoverflow.com/a/69418150/17528745